src/test/resources/amyc/typer/failing/ConstructorError4.amy
object ConstructorError
  abstract class Foo 
  case class Bar(i: Int(32)) extends Foo

  abstract class Foo2
  case class Bar2(i: Int(32)) extends Foo2
  
  val x: Foo = Bar2(42);
  x
end ConstructorError
